BS1.3 Map visibility on home and booking pages - bug fix

--- a/IKS/src/app/map/map.css
+++ b/IKS/src/app/map/map.css
@@ -13,4 +13,5 @@
 #map {
     height: 100%;
     width: 100%;
+    min-height: 500px;
 }
